# streamline-engine

./: .clang-format  .gitignore  .gitmodules  .streamlinerc  ARCHITECTURE.md  CMakeLists.txt  DOCS.md  LICENSE  Makefile  README.md  imgui.ini
config/: autoexec.cfg  video.json
include/core/: application.hpp  display_mode.hpp  event.hpp  events.hpp  exception.hpp  layer.hpp  monitor.hpp  resolution.hpp  singleton.hpp  specification.hpp  video.hpp  window.hpp
include/managers/: audio_manager.hpp  debug_manager.hpp  display_manager.hpp
include/math/: matrix.hpp
include/renderer/: model.hpp  texture.hpp
include/subsystem/: resource_manager.hpp
resources/objects/: crow.mtl  plane.mtl  red.mtl  torus.mtl
resources/shaders/: AABB.fs  AABB.vs  BSphere.fs  BSphere.vs  collider.fs  collider.vs  framebuffer.fs  model.fs  model.vs  text.fs  text.vs
resources/textures/: characters16x16.xcf  crow.xcf
src/: CMakeLists.txt  main.cpp
src/aim_trainer/: aim_trainer.cpp  aim_trainer.hpp
src/core/: debug.hpp  (+18 more)
src/deprecated/: CMakeLists.txt
src/deprecated/application/: application.cpp  application.hpp  monitor.cpp  resolution.hpp  window.cpp
src/deprecated/camera/: camera.hpp  orthographic.cpp
src/deprecated/components/: Controllable.hpp  Light.hpp  Mesh.hpp  Transform.hpp
src/deprecated/event/: mouse_event.hpp
src/deprecated/framebuffer/: framebuffer.cpp  framebuffer.hpp
src/deprecated/game/: game.hpp
src/deprecated/resource_manager/: resource_manager.cpp  resource_manager.hpp
src/deprecated/texture/: texture.hpp
src/deprecated/user_interface/: ui_element.hpp
src/engine/: CMakeLists.txt  engine.hpp  glfw3.h
src/engine/Application/: Application.cpp  Application.hpp
src/engine/Camera/: Camera.cpp  Camera.hpp  Orthographic.cpp  Orthographic.hpp  Perspective.cpp  Perspective.hpp
src/engine/Components/: AABB.cpp  AABB.hpp  Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  BSphere.cpp  BSphere.hpp  BVolume.hpp  Bone.cpp  Bone.hpp  Children.hpp  Controllable.hpp  Identifier.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Parent.hpp  PlayerCamera.hpp  RigidBody.cpp  RigidBody.hpp  Transform.cpp  Transform.hpp
src/engine/Config/: Config.cpp  Config.hpp
src/engine/Debug/: Debuggable.hpp
src/engine/EBO/: CMakeLists.txt  EBO.cpp  EBO.hpp
src/engine/Entity/: Entity.cpp  Entity.hpp
src/engine/Framebuffer/: Framebuffer.cpp  Framebuffer.hpp
src/engine/InputManager/: InputManager.cpp  InputManager.hpp
src/engine/Json/: json.cpp  json.hpp
src/engine/Logger/: Logger.cpp  Logger.hpp
src/engine/Mesh/: Mesh.cpp  Mesh.hpp
src/engine/Model/: Model.cpp  Model.hpp
src/engine/Monitor/: monitor.cpp  monitor.hpp
src/engine/Physics/: Collision.hpp
src/engine/Resolution/: resolution.cpp  resolution.hpp
src/engine/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
src/engine/Scene/: Scene.cpp  Scene.hpp
src/engine/Shader/: Shader.cpp  Shader.hpp
src/engine/Text/: Text.cpp  Text.hpp
src/engine/Texture/: Texture.cpp  Texture.hpp
src/engine/VAO/: CMakeLists.txt  VAO.cpp  VAO.hpp
src/engine/VBO/: CMakeLists.txt  VBO.cpp  VBO.hpp
src/engine/Window/: window.cpp  window.hpp
src/engine/application/: application.cpp  application.hpp  config.hpp  monitor.cpp  monitor.hpp  resolution.cpp  window.cpp  window.hpp  window_config.cpp  window_config.hpp
src/engine/camera/: CMakeLists.txt  camera.cpp  camera.hpp  orthographic.cpp  orthographic.hpp  perspective.cpp  perspective.hpp
src/engine/camera/orthographic/: CMakeLists.txt  orthographic.cpp  orthographic.hpp
src/engine/camera/perspective/: CMakeLists.txt  perspective.cpp  perspective.hpp
src/engine/collider/: collider.cpp  collider.hpp
src/engine/collisions/: AABB.cpp  AABB.hpp  aabb.cpp  aabb.hpp
src/engine/components/: AABB.cpp  AABB.hpp  BSphere.cpp  Children.hpp  Identifier.hpp  Model.hpp  Parent.hpp  RigidBody.cpp  Transform.cpp  components.hpp  identifier.hpp  parent.hpp  transform.hpp
src/engine/config/: CMakeLists.txt  config.cpp  config.hpp
src/engine/core/: application.cpp  application.hpp  event.hpp  window.cpp  window.hpp
src/engine/debug/: debug.hpp  debuggable.hpp
src/engine/debugger/: CMakeLists.txt  debugger.cpp  debugger.hpp
src/engine/entity/: entity.cpp  entity.hpp
src/engine/event/: event.hpp  key_event.hpp  mouse_event.hpp  window_event.hpp
src/engine/framebuffer/: framebuffer.cpp  framebuffer.hpp
src/engine/game/: game.hpp
src/engine/inputmanager/: inputmanager.cpp  inputmanager.hpp
src/engine/json/: json.cpp  json.hpp
src/engine/logger/: logger.cpp  logger.hpp
src/engine/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp
src/engine/mesh/circle/: CMakeLists.txt  circle.cpp  circle.hpp
src/engine/mesh/object/: object.cpp  object.hpp
src/engine/mesh/object/material/: material.cpp  material.hpp
src/engine/mesh/pyramid/: CMakeLists.txt  pyramid.cpp  pyramid.hpp
src/engine/mesh/rectangle/: CMakeLists.txt  rectangle.cpp  rectangle.hpp
src/engine/model/: model.cpp  model.hpp
src/engine/physics/: force_accumulator.cpp  force_accumulator.hpp  force_generator.cpp  force_generator.hpp  rigid_body.cpp  rigid_body.hpp  rigidbody.cpp
src/engine/renderer/EBO/: EBO.cpp  EBO.hpp
src/engine/renderer/VAO/: VAO.cpp  VAO.hpp
src/engine/renderer/VBO/: VBO.cpp  VBO.hpp
src/engine/resource_manager/: resource_manager.cpp  resource_manager.hpp
src/engine/resourcemanager/: resourcemanager.cpp
src/engine/scene/: scene.cpp  scene.hpp
src/engine/setting/: setting.hpp
src/engine/shader/: CMakeLists.txt  shader.cpp  shader.hpp
src/engine/shader_program/: CMakeLists.txt  shader_program.cpp  shader_program.hpp
src/engine/stb/: CMakeLists.txt  stb_image.cpp  stb_image.hpp
src/engine/text/: CMakeLists.txt  text.cpp  text.hpp
src/engine/texture/: CMakeLists.txt  texture.cpp  texture.hpp
src/engine/user_interface/: load_game.hpp  main_menu.hpp  ui_element.cpp  ui_element.hpp  user_interface.cpp  user_interface.hpp
src/engine/window/: CMakeLists.txt  window.cpp  window.hpp
src/engine/world/: CMakeLists.txt  world.cpp  world.hpp
(+85 files in other folders)
